Updated Entity package
Classes in entity package were update to properly reflect relationship among tables